@@ -3,7 +3,10 @@ package net.neoforged.neodev.installer;
 import com.google.gson.GsonBuilder;
 import net.neoforged.neodev.utils.DependencyUtils;
 import net.neoforged.neodev.utils.FileUtils;
+import net.neoforged.neodev.utils.MavenIdentifier;
+import org.apache.maven.artifact.versioning.DefaultArtifactVersion;
 import org.gradle.api.DefaultTask;
+import org.gradle.api.GradleException;
 import org.gradle.api.artifacts.Configuration;
 import org.gradle.api.file.RegularFileProperty;
 import org.gradle.api.provider.ListProperty;
@@ -23,6 +26,7 @@ import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
  * Creates the JSON file for running NeoForge via the Vanilla launcher.
@@ -30,9 +34,6 @@ import java.util.Map;
 public abstract class CreateLauncherProfile extends DefaultTask {
     @Inject
     public CreateLauncherProfile() {}
-
-    @Input
-    public abstract Property<String> getFmlVersion();
 
     @Input
     public abstract Property<String> getMinecraftVersion();
@@ -46,22 +47,25 @@ public abstract class CreateLauncherProfile extends DefaultTask {
     @Nested
     protected abstract ListProperty<IdentifiedFile> getLibraryFiles();
 
+    /**
+     * The libraries that the Minecraft version we target already has as dependencies.
+     */
+    @Input
+    protected abstract ListProperty<MavenIdentifier> getMinecraftLibraryIds();
+
     public void setLibraries(Configuration libraries) {
         getLibraryFiles().set(IdentifiedFile.listFromConfiguration(getProject(), libraries));
     }
 
+    public void setMinecraftLibraries(Configuration configuration) {
+        getMinecraftLibraryIds().set(configuration.getIncoming().getArtifacts().getResolvedArtifacts().map(
+                artifacts -> artifacts.stream()
+                        .map(DependencyUtils::guessMavenIdentifier)
+                        .toList()));
+    }
+
     @Input
     public abstract ListProperty<URI> getRepositoryURLs();
-
-    @Input
-    public abstract ListProperty<String> getIgnoreList();
-
-    @Input
-    protected abstract Property<String> getModulePath();
-
-    public void setModules(Configuration modules) {
-        getModulePath().set(DependencyUtils.configurationToClasspath(modules, "${library_directory}/", "${classpath_separator}"));
-    }
 
     @OutputFile
     public abstract RegularFileProperty getLauncherProfile();
@@ -71,28 +75,46 @@ public abstract class CreateLauncherProfile extends DefaultTask {
         var time = LocalDateTime.now().format(DateTimeFormatter.ISO_DATE_TIME);
 
         getLogger().info("Collecting libraries for Launcher Profile");
-        var libraries = LibraryCollector.resolveLibraries(getRepositoryURLs().get(), getLibraryFiles().get());
+
+        // We have to filter out any libraries that are already part of Minecraft, since
+        // the Vanilla Launcher overrides not only the classifier we add, but also all other
+        // classifiers of the same library. Example: if we add lwjgl, Vanilla removes all lwjgl natives, unless
+        // we also add them.
+        var minecraftLibraryVersions = getMinecraftLibraryIds().get().stream()
+                .collect(Collectors.toMap(mavenId -> mavenId.withVersion("*").artifactNotation(), mavenId -> new DefaultArtifactVersion(mavenId.version())));
+        var libraryFiles = new ArrayList<>(getLibraryFiles().get());
+        libraryFiles.removeIf(identifiedFile -> {
+            var libraryId = identifiedFile.getIdentifier().get();
+            var idWithoutVersion = libraryId.withVersion("*");
+            var minecraftVersion = minecraftLibraryVersions.get(idWithoutVersion.artifactNotation());
+            if (minecraftVersion == null) {
+                return false; // If Minecraft doesn't have the library at all, we add it ourselves.
+            }
+            // Otherwise we have to compare versions
+            var libraryVersion = new DefaultArtifactVersion(libraryId.version());
+            if (libraryVersion.compareTo(minecraftVersion) < 0) {
+                throw new GradleException("Downgrading library " + libraryId + " from the Minecraft version " + minecraftVersion);
+            } else if (libraryVersion.compareTo(minecraftVersion) == 0) {
+                getLogger().info("Removing library {} since Minecraft already ships version {}", libraryId, minecraftVersion);
+                return true; // Remove, if it's older or equal
+            } else {
+                return false;
+            }
+        });
+
+        var libraries = LibraryCollector.resolveLibraries(getRepositoryURLs().get(), libraryFiles);
 
         var gameArguments = new ArrayList<>(List.of(
                 "--fml.neoForgeVersion", getNeoForgeVersion().get(),
-                "--fml.fmlVersion", getFmlVersion().get(),
                 "--fml.mcVersion", getMinecraftVersion().get(),
-                "--fml.neoFormVersion", getRawNeoFormVersion().get(),
-                "--launchTarget", "neoforgeclient"));
+                "--fml.neoFormVersion", getRawNeoFormVersion().get()));
 
         var jvmArguments = new ArrayList<>(List.of(
                 "-Djava.net.preferIPv6Addresses=system",
-                "-DignoreList=" + String.join(",", getIgnoreList().get()),
                 "-DlibraryDirectory=${library_directory}"));
 
-        jvmArguments.add("-p");
-        jvmArguments.add(getModulePath().get());
-
         jvmArguments.addAll(List.of(
-                "--add-modules", "ALL-MODULE-PATH",
-                "--add-opens", "java.base/java.util.jar=cpw.mods.securejarhandler",
-                "--add-opens", "java.base/java.lang.invoke=cpw.mods.securejarhandler",
-                "--add-exports", "java.base/sun.security.util=cpw.mods.securejarhandler",
+                "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
                 "--add-exports", "jdk.naming.dns/com.sun.jndi.dns=java.naming"));
 
         var arguments = new LinkedHashMap<String, List<String>>();
@@ -104,7 +126,7 @@ public abstract class CreateLauncherProfile extends DefaultTask {
                 time,
                 time,
                 "release",
-                "cpw.mods.bootstraplauncher.BootstrapLauncher",
+                "net.neoforged.fml.startup.Client",
                 getMinecraftVersion().get(),
                 arguments,
                 libraries
@@ -126,5 +148,6 @@ record LauncherProfile(
         String mainClass,
         String inheritsFrom,
         Map<String, List<String>> arguments,
-        List<Library> libraries) {}
+        List<Library> libraries) {
+}
 
